fix: improve general readability

--- a/_sass/layout/_site.scss
+++ b/_sass/layout/_site.scss
@@ -54,7 +54,8 @@
   .Site--cv,
   .Site--post {
     .Site__main > .container { 
-      --site-container-width: 50%;
+      --site-container-width: auto;
+      --site-content-max-width: 60rem;
     }
   }
 }
